Fix listIndexes when it's called with uninitialized FCV

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-07-20
    • 200
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-89953 introduced a feature flag and this is checked through the method isEnabled(). However, this method may throw if the FCV is not initialized, which can happen on unreplicated collections ("local" DB) on a node that is still not joined to a replica set. Therefore, we need to replace isEnabled call with isEnabledUseLastLTSFCVWhenUninitialized()

            Assignee:
            Silvia Surroca
            Reporter:
            Silvia Surroca
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: