SERVER-130561 Fix listIndexes when it's called with uninitialized FCV (#57600)

GitOrigin-RevId: f1f584a5e9703931ef4d849bb8e2b04ff6de15bb